fixing z-index for home page

--- a/public/style.css
+++ b/public/style.css
@@ -187,6 +187,7 @@ button {
 #footer {
   position: fixed !important;
   width: 100vw !important;
+  z-index: 2;
 }
 
 #footer div {
@@ -281,20 +282,21 @@ button {
 }
 
 #sunImg {
-	height: 10vh;
 	width: 10vw;
 	padding: 5px;
 	position: fixed;
   left: 50vw;
   bottom: 20vh;
   animation: moveSun 2s ease-in;
+  z-index: -1;
 }
 
 #mtns {
 	width: 100vw;
 	margin: -10px;
 	position: fixed;
-	bottom: 0px;
+  bottom: 0px;
+  z-index: -1;
 }
 
 /* ----------- iPhone 5, 5S, 5C and 5SE ----------- */
